--- a/config-eureka.yml
+++ b/config-eureka.yml
@@ -1,11 +1,11 @@
 spring:
   profiles:
     active:
-    - dev
+    - 7001
 
 ---
 spring:
-  profiles: dev
+  profiles: 7001
 server:
   port: 7001
 eureka:
